cabal-version: 3.0
name:          cuttlefish-compiler
version:       0.0.0
author:        Hadrian Hughes
maintainer:    hadrianhughes@gmail.com
category:      Development
build-type:    Simple

common warnings
  ghc-options: -Wall

executable cuttlefish-compiler
  import:  warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.17.0.0
    , cuttlefish-compiler
  hs-source-dirs:   app
  default-language: Haskell2010

library
  exposed-modules:
    Parser
  hs-source-dirs:
    src
  build-depends:
    base ^>=4.17.0.0
    , megaparsec
    , text
  default-language: Haskell2010
