cabal-version: 3.0
name:          cuttlefish-compiler
version:       0.0.0
author:        Hadrian Hughes
maintainer:    hadrianhughes@gmail.com
category:      Development
build-type:    Simple

common warnings
  ghc-options: -Wall

executable cuttlefish-compiler
  import:  warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.17.0.0
    , text
    , cuttlefish-compiler
    , optparse-applicative
    , pretty-simple
  hs-source-dirs:   app
  default-extensions: OverloadedStrings, LambdaCase
  default-language: Haskell2010

library
  exposed-modules:
    Cuttlefish
    Cuttlefish.Parser
    Cuttlefish.Parser.Ast
    Cuttlefish.Parser.Body
    Cuttlefish.Parser.Core
    Cuttlefish.Parser.Types
    Cuttlefish.Semant
    Cuttlefish.Semant.Error
    Cuttlefish.Semant.Sast
  hs-source-dirs:
    src
  build-depends:
    base ^>=4.17.0.0
    , megaparsec
    , text
    , string-conversions
    , containers
    , mtl
  default-extensions: OverloadedStrings, LambdaCase
  default-language: Haskell2010
